---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"class Foo { int a; } class Foo { int b; }\")"
---
/main.td
class 'Foo' already defined
class Foo { int a; } class Foo { int b; }
                           ^^^
